Connected Front to back, added datatable, put data in graph

--- a/react-ui/src/App.css
+++ b/react-ui/src/App.css
@@ -18,8 +18,14 @@
   color: black;
 }
 
-.App-status-bar {
+.App-caution-bar {
   background-color: #ffff00;
+  height: 10vmin;
+  width: 100vmin;
+}
+
+.App-warning-bar {
+  background-color: #ff0000;
   height: 10vmin;
   width: 100vmin;
 }
