--- a/react-ui/src/App.css
+++ b/react-ui/src/App.css
@@ -3,13 +3,27 @@
   text-align: center;
 }
 
+.App-Loading {
+  background-color: #e6e6e6;
+  text-align: center;
+  vertical-align: middle;
+  height: 100vmin;
+}
 .App-logo {
-  height: 20vmin;
+  height: 17vmin;
   align-items: center;
 }
-
+.App-title{
+	display: flex;
+	flex-direction: row;
+	align-items: flex-end;
+	font-weight: bold;
+	font: verdana;
+	color: #004977;	
+	
+}
 .App-header {
-  min-height: 40vh;
+  min-height: 25vh;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -19,9 +33,12 @@
 }
 .App-Date-Boxes{
    float: center;
+   font-size: calc(10px + 2vmin);
 }
 .App-CheckBoxes{
-   font-size: calc(10px + 2vmin);
+   //font-size: calc(10px + 2vmin);
+   transform: scale(1.5);
+   
 }
 .App-caution-bar {
   background-color: #ffff00;
